# credit-risk-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: tools.py
credit_risk_agent/: config.py
credit_risk_agent/agent/: __init__.py  agent.py  events.py
credit_risk_agent/agent/tools/: __init__.py  get_client_financial_metrics.py  run_model.py  sql_query.py  tool.py
credit_risk_agent/app/: cli.py  main.py
credit_risk_agent/app/app_pages/: chat.py  client_profile.py
credit_risk_agent/data/: __init__.py  downloader.py  standard_scaler.py
credit_risk_agent/model/: __init__.py  dataset.py  model.py  train.py
data/: __init__.py  dataset_downloader.py  normalization.py  preprocessing.py
model/: __init__.py  dataset.py  model.py  normalization.py  preprocessing.py  train.py
notebooks/: data_research.ipynb  model_training.ipynb
scripts/: __init__.py  download_dataset.py  train.py
tests/integration/: test_agent_integration.py  test_agent_live.py  test_dataset_downloader_integration.py  test_run_model_tool_integration.py  test_train_script_integration.py
tests/unit/agent/: test_agent.py  test_get_client_financial_metrics.py  test_run_model_tool.py  test_sql_query_tool.py  test_tool.py  test_tools.py
tests/unit/data/: test_dataset_downloader_unit.py  test_downloader_unit.py  test_normalization.py  test_preprocessing.py  test_standard_scaler.py
tests/unit/model/: test_dataset.py  test_model.py  test_normalization.py  test_preprocessing.py
tests/unit/scripts/: test_train.py
