[project]
name = "credit-risk-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "iraedeus",email = "dtotjmyanin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=2.2.3,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "torch (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}
