[project]
name = "credit-risk-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "iraedeus",email = "dtotjmyanin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=2.2.3,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "torch (>=2.13.0,<3.0.0)",
    "jupyterlab (>=4.6.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.11.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "mypy (>=2.3.0,<3.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
]
ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "RUF001",  # String contains ambiguous unicode character
    "RUF002",  # Docstring contains ambiguous unicode character
    "RUF003",  # Comment contains ambiguous unicode character
]

[tool.mypy]
python_version = "3.12"
files = ["data", "agent", "model"]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
